objects/Sharing_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Country_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Group</label>
        <referenceTo>Country_Group__c</referenceTo>
        <relationshipLabel>(Demo) Sharing Rule</relationshipLabel>
        <relationshipName>Demo_Sharing_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Series Group</label>
        <referenceTo>SeriesGroup__c</referenceTo>
        <relationshipLabel>(Demo) Sharing Rule</relationshipLabel>
        <relationshipName>Demo_Sharing_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Sharing_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>(Demo) Sharing Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Sh-{000}</displayFormat>
        <label>(Demo) Sharing Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>